# dcom

./: CMakeLists.txt  LICENSE  library.json
inc/: message.hpp  messages.hpp
proto/: message.proto  sensor.proto
src/: CMakeLists.txt
